Fixed visible input fields in social-container when not editing Removed featured images from Kitchen\TrendingTopics Implemented kitchen-served motd

--- a/css/vs-admin.css
+++ b/css/vs-admin.css
@@ -282,6 +282,17 @@ DIV.field-container INPUT.persist[disabled]
 .social-container.currently-editing .field INPUT {
     display: inline-block;
 }
+.social-container .field INPUT[type='text']
+{
+    max-width: 5%;
+    min-width: 5%;
+}
+.social-container.currently-editing .field INPUT[type='text']
+{
+    max-width: 65%;
+    min-width: 65%;
+}
+
 DIV.social-container.currently-editing DIV.field-container INPUT
 {
     border-color: rgba(221, 221, 221, 1.0);
